--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^4.17.14",
     "@types/gm": "^1.18.12",
     "@types/jest": "^29.2.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.3",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
@@ -38,6 +39,7 @@
     "express": "^4.18.2",
     "gm": "^1.25.0",
     "image-size": "^1.0.2",
+    "jsonwebtoken": "^8.5.1",
     "winston": "^3.8.2",
     "yaml": "^2.1.3"
   }
